# The-Forge-Protocol-Agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  forge.sh  install.sh  pyproject.toml
docs/: forge-protocol-paper.tex
lib/: __init__.py  audit.py  auditor.py  canary.py  checkpoints.py  modes.py  patterns.py  state.py  validator.py
modes/: anvil.yaml  crucible.yaml  executor.yaml  forge.yaml  furnace.yaml  schema.yaml
plugin/: __init__.py  plugin.yaml
skills/anvil-mode/: SKILL.md
skills/crucible-mode/: SKILL.md
skills/executor-mode/: SKILL.md
skills/forge-audit/: SKILL.md
skills/forge-mode/: SKILL.md
skills/forge-status/: SKILL.md
skills/furnace-mode/: SKILL.md
souls/: anvil.md  crucible.md  executor.md  forge-orchestrator.md  forge.md  furnace.md
tests/: test_auditor.py  test_canary.py  test_checkpoints.py  test_modes.py  test_plugin.py  test_state.py  test_validator.py
